fix: add margin-bottom to emergency images for better spacing

--- a/css/games-style.css
+++ b/css/games-style.css
@@ -264,6 +264,7 @@ img, video {
     .Emergency ul li img {
         width: 60px;
         height: 60px;
+        margin-bottom: 5px;
     }
     .Emergency ul li a {
         font-size: 16px;
