--- a/css/style.css
+++ b/css/style.css
@@ -442,6 +442,7 @@ img, video {
     .Emergency ul li img {
         width: 80px;
         height: 80px;
+        margin-bottom: 5px;
     }
     .Emergency ul li a {
         font-size: 20px;
@@ -459,6 +460,7 @@ img, video {
     .Emergency ul li img {
         width: 60px;
         height: 60px;
+        margin-bottom: 5px;
     }
     .Emergency ul li a {
         font-size: 16px;
